# senseair-s8

./: README.md  flake.nix  ghcid-wrapper
senseair-s8/: senseair-s8.cabal
senseair-s8/app/: Main.hs
senseair-s8/src/: SenseairS8.hs
senseair-s8/src/Data/Digest/: CRC16.hs
