cabal-version: 3.0

name:           senseair-s8
version:        0.1.0.0
--maintainer: TODO
--copyright: TODO
license:        BSD-2-Clause
build-type:     Simple

source-repository head
  type: git
  --location: TODO

common shared-properties
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    ViewPatterns

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-methods

common shared-executable-properties
  import: shared-properties
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N -I0"

library
  import: shared-properties
  exposed-modules:
    SenseairS8
  other-modules:
  build-depends:
    base,
  hs-source-dirs:
    src

executable senseair-s8
  import: shared-executable-properties
  build-depends:
    base,
    senseair-s8,
  hs-source-dirs:
    app
  main-is: Main.hs
